--- a/index.html
+++ b/index.html
@@ -1,35 +1,34 @@
 <!DOCTYPE html>
-<html>
+<html lang="zxx">
 <head>
 		<meta charset='UTF-8'>
 		<title>Asia</title>
 		<link rel="stylesheet" href="css/reset.css" >
 		<link rel='stylesheet' href="css/style.css">
+		<!-- <link rel='stylesheet' href="../css/fonts.css"> -->
 		<link href='https://fonts.googleapis.com/css?family=Open+Sans&subset=latin,cyrillic-ext' rel='stylesheet'>
 </head>
 
 <body>
 		<div id="wrapper">
 				<div class="header">
-						<img class="logo" src="img/logo.png" alt="LOGO">
-        <div class="contacts clearfix">
-						<p>
-                Наши контакты:<br>
-    						+9-098-765-4321 <br>
-    				    +9-0123-456-890 <br>
-    				    info@asia-holidays.com
-			      </p>
+						<a href="#"><img class="logo" src="img/logo.png" alt="LOGO"></a>
+						<ul class="contacts clearfix">
+								<li>Наши контакты:</li>
+								<li>+9-098-765-4321</li>
+								<li>+9-0123-456-890</li>
+	    				  <li>info@asia-holidays.com</li>
+						</ul>
 
-	          <ul class="countris clearfix">
-            <li><a href="#"><img src="img/maldives.png" alt="Maldives">Мальдивы</a></li>
-            		<li><a href="#"><img src="img/sri-lanka.png" alt="Sri-lanka">Шри-ланка</a></li>
-            		<li><a href="#"><img src="img/butan.png" alt="Butan">Бутан</a></li>
-            		<li><a href="#"><img src="img/tibet.png" alt="Tibet">Тибет</a></li>
-            		<li><a href="#"><img src="img/nepal.png" alt="Nepal">Непал</a></li>
-            		<li><a href="#"><img src="img/india.png" alt="India">Индия</a></li>
-	          </ul>
-			  </div>
-		    </div>
+					 	<ul class="countris clearfix">
+								<li><a href="#"><img src="img/maldives.png" alt="Maldives">Мальдивы</a></li>
+								<li><a href="#"><img src="img/sri-lanka.png" alt="Sri-lanka">Шри-ланка</a></li>
+								<li><a href="#"><img src="img/butan.png" alt="Butan">Бутан</a></li>
+								<li><a href="#"><img src="img/tibet.png" alt="Tibet">Тибет</a></li>
+								<li><a href="#"><img src="img/nepal.png" alt="Nepal">Непал</a></li>
+								<li><a href="#"><img src="img/india.png" alt="India">Индия</a></li>
+					 	</ul>
+				</div>
 
 			  <img class="beach" src="img/sea.jpg" alt="Beach">
 
@@ -68,52 +67,53 @@
 	      </ul>
 
 		    <div class="content clearfix">
-			  <div class="info">
-				    <h1>Информация</h1>
-					  <p>
-    					 Lorem ipsum dolor sit amet
-    					 Lorem ipsum dolor sit amet
-    					 Lorem ipsum dolor sit amet
-    					 Lorem ipsum dolor sit amet
-    					 Lorem ipsum dolor sit amet
-    					 Lorem ipsum dolor sit amet
-    					 Lorem ipsum dolor sit amet
-    					 Lorem ipsum dolor sit amet
-    					 Lorem ipsum dolor sit amet
-    					 Lorem ipsum dolor sit amet
-    					 Lorem ipsum dolor sit amet
-					  </p>
-			  </div>
+					  <div class="info">
+						    <h1>Информация</h1>
+							  <p>
+		    					 Lorem ipsum dolor sit amet
+		    					 Lorem ipsum dolor sit amet
+		    					 Lorem ipsum dolor sit amet
+		    					 Lorem ipsum dolor sit amet
+		    					 Lorem ipsum dolor sit amet
+		    					 Lorem ipsum dolor sit amet
+		    					 Lorem ipsum dolor sit amet
+		    					 Lorem ipsum dolor sit amet
+		    					 Lorem ipsum dolor sit amet
+		    					 Lorem ipsum dolor sit amet
+		    					 Lorem ipsum dolor sit amet
+							  </p>
+					  </div>
 
-			  <div class="center">
+					  <div class="center">
 
-			  </div>
+					  </div>
 
-			  <div class="news">
-				    <h1>Новости</h1>
-				    <p>
-        				Lorem ipsum dolor sit amet
-        				Lorem ipsum dolor sit amet
-        				Lorem ipsum dolor sit amet
-        				Lorem ipsum dolor sit amet
-        				Lorem ipsum dolor sit amet
-        				Lorem ipsum dolor sit amet
-        				Lorem ipsum dolor sit amet
-        				Lorem ipsum dolor sit amet
-        				Lorem ipsum dolor sit amet
-        				Lorem ipsum dolor sit amet
-        				Lorem ipsum dolor sit amet
-        				Lorem ipsum dolor sit amet
-        				Lorem ipsum dolor sit amet
-        				Lorem ipsum dolor sit amet
-        				Lorem ipsum dolor sit amet
-        				Lorem ipsum dolor sit amet
-        				Lorem ipsum dolor sit amet
-        				Lorem ipsum dolor sit amet
-        				Lorem ipsum dolor sit amet
-        				Lorem ipsum dolor sit amet
-				    </p>
-		    </div>
+					  <div class="news">
+						    <h1>Новости</h1>
+						    <p>
+		        				Lorem ipsum dolor sit amet
+		        				Lorem ipsum dolor sit amet
+		        				Lorem ipsum dolor sit amet
+		        				Lorem ipsum dolor sit amet
+		        				Lorem ipsum dolor sit amet
+		        				Lorem ipsum dolor sit amet
+		        				Lorem ipsum dolor sit amet
+		        				Lorem ipsum dolor sit amet
+		        				Lorem ipsum dolor sit amet
+		        				Lorem ipsum dolor sit amet
+		        				Lorem ipsum dolor sit amet
+		        				Lorem ipsum dolor sit amet
+		        				Lorem ipsum dolor sit amet
+		        				Lorem ipsum dolor sit amet
+		        				Lorem ipsum dolor sit amet
+		        				Lorem ipsum dolor sit amet
+		        				Lorem ipsum dolor sit amet
+		        				Lorem ipsum dolor sit amet
+		        				Lorem ipsum dolor sit amet
+		        				Lorem ipsum dolor sit amet
+										Lorem ipsum dolor sit amet
+								</p>
+				    </div>
         </div>
 		    <div class="footer clearfix">
 			     <p> Copyright(C) asia-holidays.com. 2010</p>
