--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-		<div id="wrapper">
+		<div class="wrapper">
 				<div class="header">
 						<a href="#"><img class="logo" src="img/logo.png" alt="LOGO"></a>
 						<ul class="contacts clearfix">
